KAFKA-14405: correct and explain the controlled-config warnings
Follow-up fixes to the handling of client configs that Kafka Streams controls:

- getMainConsumerConfigs() enforced group.id against its groupId parameter.
  Callers that only read a value out of the returned map pass a placeholder
  (InternalTopicManager passes "dummy", StreamThread "dummyGroupId"), so a user
  who set group.id was told that the placeholder was the value Streams would
  use. Enforce the configured application.id instead, which is what Streams
  always uses as the group id.

- A user value that differed from the Streams value only in type, such as
  Boolean.FALSE for enable.auto.commit where Streams sets the string "false",
  produced a warning that the value was being ignored and replaced by an
  identical one. Compare the string forms instead.

- Warnings for configs that are only controlled when EOS is enabled no longer
  explained themselves, so an EOS-only rule looked arbitrary next to the same
  config being respected without EOS. Append the processing guarantee as the
  reason for those configs, and only for those configs.

- The maps holding the EOS variants repeated every entry of their non-EOS
  counterpart, which would silently stop enforcing a config added to one map
  but not the other. Hold only the EOS-specific entries and apply them on top,
  and build all of these maps with Map.of instead of static initializer blocks.

Tests cover the group id enforcement for both real and placeholder callers, the
per-client-prefix enforcement of isolation.level under EOS, values that differ
only in type, and that a config controlled regardless of EOS is not attributed
to the processing guarantee.